Add alembic and change the ai model to gemini

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 fastapi
 uvicorn[standard]
-openai
+google-generativeai
+google-genai
 sqlalchemy
 psycopg2-binary
 python-dotenv
 pydantic
 pydantic-settings
+alembic
