--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-OPENAI_API_KEY=your_openai_api_key_here
-DATABASE_URL=postgresql://username:password@localhost:5432/chatbot_db
+GEMINI_API_KEY=gemini_api_key_here
+DATABASE_URL=postgresql://postgres:postgrespass@localhost:5432/chatbot
+MODEL_NAME=gemini-3-flash-preview
